Main menu has been prototyped

--- a/index.html
+++ b/index.html
@@ -11,6 +11,21 @@
     <title>Projetar.me</title>
 </head>
 <body>
-    
+    <nav class="nav main-nav">
+        <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
+        <div class="input-group search-bar">
+            <input type="text" class="form-control" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <button class="btn btn-outline-light search-btn" type="button" id="button-addon2">Pesquisar</button>
+          </div>
+        <ul class="nav links-menu">
+            <a href="#" class="nav-link">Home</a>
+            <a href="#" class="nav-link">Descubra</a>
+            <a href="#" class="nav-link">Seja um Engenheiro</a>
+            <a href="#" class="nav-link">Taxas</a>
+            <a href="#" class="nav-link">Ajuda</a>
+            <a href="#" class="nav-link">Contato</a>
+            <a href="#" class="border-button-link d-flex align-items-center">Entre</a>
+        </ul>
+    </nav>
 </body>
 </html>
