Menu search bar has been improved

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <nav class="nav main-nav">
         <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
         <div class="input-group search-bar">
-            <input type="text" class="form-control" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
+            <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
             <button class="btn btn-outline-light search-btn" type="button" id="button-addon2">Pesquisar</button>
-          </div>
+        </div>
         <ul class="nav links-menu">
             <a href="#" class="nav-link">Home</a>
             <a href="#" class="nav-link">Descubra</a>
@@ -27,5 +27,9 @@
             <a href="#" class="border-button-link d-flex align-items-center">Entre</a>
         </ul>
     </nav>
+    
+    <section class="hero">
+
+    </section>
 </body>
 </html>
