--- a/index.html
+++ b/index.html
@@ -28,8 +28,20 @@
         </ul>
     </nav>
     
-    <section class="hero">
-
+    <section class="hero row mw-100 d-flex flex-column justify-content-center">
+        <div class="col-6 p-0">
+            <h1 class="mb-5">Ache os melhores <i>engenheiros</i> para sua empresa hoje mesmo!</h1>
+            <div class="input-group search-bar mb-4">
+                <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-light search-btn" type="button" id="button-addon2">Pesquisar</button>
+            </div>
+            <ul class="p-0 m-0 d-flex">
+                <p class="m-0">Popular:</p>
+                <a href="#" class="circle-link ms-2 me-2">Casa</a>
+                <a href="#" class="circle-link me-2">Jardim</a>
+                <a href="#" class="circle-link">Praia</a>
+            </ul>
+        </div>
     </section>
 </body>
 </html>
