--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
         <div class="input-group search-bar">
             <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-light search-btn" type="button" id="button-addon2">Pesquisar</button>
+            <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
         </div>
         <ul class="nav links-menu">
             <a href="#" class="nav-link">Home</a>
@@ -33,13 +33,13 @@
             <h1 class="mb-5">Ache os melhores <i>engenheiros</i> para sua empresa hoje mesmo!</h1>
             <div class="input-group search-bar mb-4">
                 <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
-                <button class="btn btn-outline-light search-btn" type="button" id="button-addon2">Pesquisar</button>
+                <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
             </div>
             <ul class="p-0 m-0 d-flex">
-                <p class="m-0">Popular:</p>
-                <a href="#" class="circle-link ms-2 me-2">Casa</a>
-                <a href="#" class="circle-link me-2">Jardim</a>
-                <a href="#" class="circle-link">Praia</a>
+                <p class="m-0 fw-500 d-flex justify-end">Popular:</p>
+                <a href="#" class="circle-link ms-3 me-2 fw-500">Casa</a>
+                <a href="#" class="circle-link me-2 fw-500">Jardim</a>
+                <a href="#" class="circle-link fw-500">Praia</a>
             </ul>
         </div>
     </section>
