A image was inserted into hero background

--- a/index.html
+++ b/index.html
@@ -11,24 +11,26 @@
     <title>Projetar.me</title>
 </head>
 <body>
-    <nav class="nav main-nav">
-        <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
-        <div class="input-group search-bar">
-            <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
-            <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
-        </div>
-        <ul class="nav links-menu">
-            <a href="#" class="nav-link">Home</a>
-            <a href="#" class="nav-link">Descubra</a>
-            <a href="#" class="nav-link">Seja um Engenheiro</a>
-            <a href="#" class="nav-link">Taxas</a>
-            <a href="#" class="nav-link">Ajuda</a>
-            <a href="#" class="nav-link">Contato</a>
-            <a href="#" class="border-button-link d-flex align-items-center">Entre</a>
-        </ul>
-    </nav>
+    <div class="nav-container d-flex justify-content-center">
+        <nav class="nav main-nav">
+            <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
+            <div class="input-group search-bar">
+                <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
+                <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
+            </div>
+            <ul class="nav links-menu ms-3">
+                <a href="#" class="nav-link">Home</a>
+                <a href="#" class="nav-link">Descubra</a>
+                <a href="#" class="nav-link">Seja um Engenheiro</a>
+                <a href="#" class="nav-link">Taxas</a>
+                <a href="#" class="nav-link">Ajuda</a>
+                <a href="#" class="nav-link">Contato</a>
+                <a href="#" class="border-button-link d-flex align-items-center">Entre</a>
+            </ul>
+        </nav>
+    </div>
     
-    <section class="hero row mw-100 d-flex flex-column justify-content-center">
+    <section class="hero row mw-100 d-flex flex-column justify-content-center m-0">
         <div class="col-6 p-0">
             <h1 class="mb-5">Ache os melhores <i>engenheiros</i> para sua empresa hoje mesmo!</h1>
             <div class="input-group search-bar mb-4">
