added logo in png format

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="nav-container d-flex justify-content-center">
         <nav class="nav main-nav">
-            <a href="#"><img src="assets/img/logo.jpeg" alt="Logo" class="logo"></a>
+            <a href="#"><img src="assets/img/logo.png" alt="Logo" class="logo"></a>
             <div class="input-group search-bar">
                 <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
