Partners snippet added

--- a/index.html
+++ b/index.html
@@ -45,5 +45,16 @@
             </ul>
         </div>
     </section>
+
+    <div class="partners mw-100 d-flex justify-content-center">
+        <p class="fw-500 m-0 d-flex align-items-center">Apoiado por:</p>
+        <div class="partners-icons d-flex align-items-center">
+            <img src="assets/img/partners/google.png" alt="">
+            <img src="assets/img/partners/netflix.png" alt="">
+            <img src="assets/img/partners/paypal.png" alt="">
+            <img src="assets/img/partners/peg.png" alt="">
+        </div>
+    </div>
+
 </body>
 </html>
