Services section has been prototyped

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/uikit.css">
+    <link rel="stylesheet" href="assets/css/uikit-rtl.css">
+    <script src="assets/js/uikit.js"></script>
+    <script src="assets/js/uikit-icons.js"></script>
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/bootstrap.js" defer></script>
@@ -13,7 +17,7 @@
 <body>
     <div class="nav-container d-flex justify-content-center">
         <nav class="nav main-nav">
-            <a href="#"><img src="assets/img/logo-projetar.svg" alt="Logo" class="logo"></a>
+            <a href="#" class="d-flex justify-content-end align-items-end"><img src="assets/img/logo-projetar.svg" alt="Logo" class="logo"></a>
             <div class="input-group search-bar">
                 <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
@@ -55,6 +59,100 @@
             <img src="assets/img/partners/peg.png" alt="">
         </div>
     </div>
+
+    <section class="services">
+        <h1 class="mb-5 fw-500 services-title">Nosso principais serviços</h1>
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
+
+            <ul class="uk-slider-items uk-child-width-1-5 uk-child-width-1-5@m uk-grid-small">
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-01.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-02.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-03.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-04.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-05.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-06.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-07.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-08.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+                <li>
+                    <div class="uk-panel">
+                        <img src="assets/img/category/slide-09.jpg" alt="">
+                        <div class="uk-position-top uk-panel card-text">
+                            <p class="m-0">Avante!</p>
+                            <h4 class="m-0">A empresa número 1</h4>
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        
+            <a class="uk-position-center-left uk-position-small uk-hidden-hover arrow-next-slide ms-1" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover arrow-next-slide me-1" href="#" uk-slidenav-next uk-slider-item="next"></a>
+        
+        </div>
+    </section>
 
 </body>
 </html>
