Explore section has been made

--- a/index.html
+++ b/index.html
@@ -173,5 +173,76 @@
         </div>
     </section>
 
+    <section class="explore">
+        <h1>Explore o mercado</h1>
+
+        <div class="row first-row-explore">
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+            <div class="col">
+                <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
+                <hr class="line-item mx-auto">
+                <p class="text-center fw-500">Gráficos e Vetores</p>
+            </div>
+        </div>
+
+    </section>
+
 </body>
 </html>
