--- a/index.html
+++ b/index.html
@@ -244,5 +244,42 @@
 
     </section>
 
+    <section class="business">
+        <div class="row mw-100">
+            <div class="benefits-texts col-6">
+                <h3 class="d-flex m-0" style="padding-bottom: 32px;"><span style="font-weight: 700">Projetar·me</span>&nbsp;Plus. <span class="align-self-top ms-2" style="background-color: rgb(255, 255, 255); font-size: 12px; border-radius: 20px; padding: 5px; font-weight: 800; height: fit-content;">Novidade</span></h3>
+                <h1 class="m-0 benefits-title" style="font-weight: 700;">A Brasil inteiro com a gente, e você?</h1>
+                <h5 class="d-flex benefits-topic-title m-0" style="padding-bottom: 32px;">
+                    Re-invente sua empresa do zero e mude completamente, essa é a nova onda.
+                </h5>
+
+                <h5 class="d-flex benefits-topic-title benefits-topic-title-2 m-0">
+                    <svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 
+                    1° Empresa do ramo no Brasil
+                </h5>
+
+                <h5 class="d-flex benefits-topic-title benefits-topic-title-2 m-0">
+                    <svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 
+                    1° Empresa do ramo no Brasil, e aí vamo fechar esse negócio?
+                </h5>
+
+                <h5 class="d-flex benefits-topic-title benefits-topic-title-2 m-0">
+                    <svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 
+                    1° Empresa do ramo no Brasil, e aí vamo fechar esse negócio?
+                </h5>
+
+                <h5 class="d-flex benefits-topic-title benefits-topic-title-2 m-0">
+                    <svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 
+                    1° Empresa do ramo no Brasil
+                </h5>
+
+                <button class="btn btn-outline-light search-btn more-about" type="button" id="button-addon2" >Explore Essa Nova Experiencia</button>
+            </div>
+            <div class="col-6 d-flex align-items-center">
+                <img src="assets/img/business/business-desktop-870-x1.png" class="mw-100 benefits-img" alt="">
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
