--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/style.css">
     <script src="assets/js/bootstrap.js" defer></script>
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" defer></script>
     <title>Projetar.me</title>
 </head>
 <body>
