Collors have been improved on Explore section

--- a/index.html
+++ b/index.html
@@ -179,32 +179,32 @@
         <div class="row first-row-explore">
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
         </div>
@@ -212,32 +212,32 @@
         <div class="row">
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
-                <hr class="line-item mx-auto">
+                <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
         </div>
