Shift section has been prototyped

--- a/index.html
+++ b/index.html
@@ -248,8 +248,11 @@
     <section class="business">
         <div class="row mw-100">
             <div class="benefits-texts col-6">
-                <h3 class="d-flex m-0" style="padding-bottom: 32px;"><span style="font-weight: 700">Projetar·me</span>&nbsp;Plus. <span class="align-self-top ms-2" style="background-color: rgb(255, 255, 255); font-size: 12px; border-radius: 20px; padding: 5px; font-weight: 800; height: fit-content;">Novidade</span></h3>
-                <h1 class="m-0 benefits-title" style="font-weight: 700;">A Brasil inteiro com a gente, e você?</h1>
+                <h3 class="d-flex m-0" style="padding-bottom: 32px;">
+                    <span class="fw-700">Projetar·me</span>&nbsp;Plus. 
+                    <span class="align-self-top ms-2 float-text">Novidade</span>
+                </h3>
+                <h1 class="m-0 benefits-title fw-700">A Brasil inteiro com a gente, e você?</h1>
                 <h5 class="d-flex benefits-topic-title m-0" style="padding-bottom: 32px;">
                     Re-invente sua empresa do zero e mude completamente, essa é a nova onda.
                 </h5>
@@ -280,6 +283,68 @@
                 <img src="assets/img/business/business-desktop-870-x1.png" class="mw-100 benefits-img" alt="">
             </div>
         </div>
+    </section>
+
+    <section class="shift-section">
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="center: true">
+
+            <ul class="uk-slider-items uk-grid cartaz-items">
+                <li class="uk-width-4-4 d-flex row">
+                    <img src="assets/img/thumbnails/01.jpg" class="uk-panel d-flex col align-items-center p-0" alt="">
+                    <div class="d-flex flex-column col justify-content-center cartaz">
+                        <p class="founder-paragraph">Kay Kim, Co-fundador | <img src="assets/img/thumbnails/logo01.png" alt=""></p>
+                        <p class="founder-text">
+                            "It's extremely exciting that Fiverr has freelancers from all over the world — it broadens the talent pool. One of the best things about Fiverr is that while we're sleeping, someone's working."
+                        </p>
+                    </div>
+                </li>
+                <li class="uk-width-4-4 d-flex row">
+                    <img src="assets/img/thumbnails/01.jpg" class="uk-panel d-flex col align-items-center p-0" alt="">
+                    <div class="d-flex flex-column col justify-content-center cartaz">
+                        <p class="founder-paragraph">Kay Kim, Co-fundador | <img src="assets/img/thumbnails/logo01.png" alt=""></p>
+                        <p class="founder-text">
+                            "It's extremely exciting that Fiverr has freelancers from all over the world — it broadens the talent pool. One of the best things about Fiverr is that while we're sleeping, someone's working."
+                        </p>
+                    </div>
+                </li>
+                <li class="uk-width-4-4 d-flex row">
+                    <img src="assets/img/thumbnails/01.jpg" class="uk-panel d-flex col align-items-center p-0" alt="">
+                    <div class="d-flex flex-column col justify-content-center cartaz">
+                        <p class="founder-paragraph">Kay Kim, Co-fundador | <img src="assets/img/thumbnails/logo01.png" alt=""></p>
+                        <p class="founder-text">
+                            "It's extremely exciting that Fiverr has freelancers from all over the world — it broadens the talent pool. One of the best things about Fiverr is that while we're sleeping, someone's working."
+                        </p>
+                    </div>
+                </li>
+                <li class="uk-width-4-4 d-flex row">
+                    <img src="assets/img/thumbnails/01.jpg" class="uk-panel d-flex col align-items-center p-0" alt="">
+                    <div class="d-flex flex-column col justify-content-center cartaz">
+                        <p class="founder-paragraph">Kay Kim, Co-fundador | <img src="assets/img/thumbnails/logo01.png" alt=""></p>
+                        <p class="founder-text">
+                            "It's extremely exciting that Fiverr has freelancers from all over the world — it broadens the talent pool. One of the best things about Fiverr is that while we're sleeping, someone's working."
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        
+            <a class="uk-position-center-right uk-position-small uk-hidden-hover arrow-next-slide ms-0 me-1" href="#" uk-slidenav-next uk-slider-item="next"></a>
+            <a class="uk-position-center-left uk-position-small uk-hidden-hover arrow-next-slide me-0 ms-1" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
+        
+        </div>
+
+        <div class="d-flex justify-content-start">
+            <div class="announce-texts w-100">
+                <h3 class="d-flex m-0">
+                    <span class="fw-700">Projetar·me</span>&nbsp;Plus&nbsp;Prime.
+                </h3>
+                <h1 class="m-0 benefits-title fw-700">A Brasil inteiro com a gente, e você?</h1>
+                <h5 class="d-flex announce-topic-title m-0">
+                    Re-invente sua empresa do zero e mude completamente, essa é a nova onda.
+                </h5>
+                <button class="btn btn-outline-light search-btn more-about m-0" type="button" id="button-addon2" >Explore Essa Nova Experiencia</button>
+            </div>
+        </div>
+
     </section>
 
 </body>
