Guides section has been prototyped

--- a/index.html
+++ b/index.html
@@ -473,5 +473,29 @@
         </div>
     </section>
 
+    <section class="guides">
+        <div class="d-flex justify-content-between">
+            <h1 class="mb-5 fw-500 services-title p-0">Leia nossos guias</h1>
+            <a href="#" class="mb-5 d-flex align-items-end fw-500">Veja mais guias ></a>
+        </div>
+        <div class="row">
+            <div class="col d-flex flex-column">
+                <img src="assets/img/guides/guide-start-online-business-552-x2.png" class="guide-img" alt="">
+                <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
+                <p style="color: #95979d;" class="guide-text">O novo estilo de vida que milhões adotam.</p>
+            </div>
+            <div class="col d-flex flex-column">
+                <img src="assets/img/guides/guide-start-online-business-552-x2.png" class="guide-img" alt="">
+                <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
+                <p style="color: #95979d;" class="guide-text">O novo estilo de vida que milhões adotam.</p>
+            </div>
+            <div class="col d-flex flex-column">
+                <img src="assets/img/guides/guide-start-online-business-552-x2.png" class="guide-img" alt="">
+                <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
+                <p style="color: #95979d;" class="guide-text">O novo estilo de vida que milhões adotam.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
