Banner snippet has been prototyped

--- a/index.html
+++ b/index.html
@@ -497,5 +497,13 @@
         </div>
     </section>
 
+    <div class="d-flex justify-content-start banner-snippet mt-0">
+        <div class="banner-texts w-100 d-flex flex-column justify-content-center">
+            <h1 class="m-0 benefits-title fw-700 c-white pb-2">A Brasil inteiro com a gente</h1>
+            <h1 class="m-0 benefits-title fw-700 c-white p-40">Vai perder essa?</h1>
+            <button class="btn btn-outline-light search-btn more-about m-0 btn-width" type="button">Explore Essa Nova Experiencia</button>
+        </div>
+    </div>
+
 </body>
 </html>
