Menu has been improved

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="nav-container d-flex justify-content-center">
         <nav class="nav main-nav">
             <a href="#" class="d-flex justify-content-end align-items-end"><img src="assets/img/logo-projetar.svg" alt="Logo" class="logo"></a>
-            <div class="input-group search-bar">
+            <div class="input-group search-bar align-self-center">
                 <input type="text" class="form-control shadow-none search-input" placeholder="Pesquise algo" aria-label="Recipient's username" aria-describedby="button-addon2">
                 <button class="btn btn-outline-light search-btn fw-500" type="button" id="button-addon2">Pesquisar</button>
             </div>
@@ -30,7 +30,7 @@
                 <a href="#" class="nav-link">Taxas</a>
                 <a href="#" class="nav-link">Ajuda</a>
                 <a href="#" class="nav-link">Contato</a>
-                <a href="#" class="border-button-link d-flex align-items-center">Entre</a>
+                <a href="#" class="border-button-link d-flex align-items-center fw-500 align-self-center">Entre</a>
             </ul>
         </nav>
     </div>
@@ -504,6 +504,60 @@
             <button class="btn btn-outline-light search-btn more-about m-0 btn-width" type="button">Explore Essa Nova Experiencia</button>
         </div>
     </div>
+
+    <footer class="footer">
+        <div class="row mw-100">
+            <ul class="col p-0 d-flex flex-column">
+                <p class="footer-title fw-700">Categorias</p>
+                <a href="#" class="footer-link">Música</a>
+                <a href="#" class="footer-link">Piano</a>
+                <a href="#" class="footer-link">Programação</a>
+                <a href="#" class="footer-link">Construção Civil</a>
+                <a href="#" class="footer-link">Eletrônica</a>
+                <a href="#" class="footer-link">Ciência de dados</a>
+                <a href="#" class="footer-link">Fl Studio</a>
+                <a href="#" class="footer-link">Produção</a>
+                <a href="#" class="footer-link">Arte</a>
+                <a href="#" class="footer-link">Mais</a>
+            </ul>
+            <ul class="col p-0 d-flex flex-column">
+                <p class="footer-title fw-700">Sobre</p>
+                <a href="#" class="footer-link">Carreiras</a>
+                <a href="#" class="footer-link">Vagas</a>
+                <a href="#" class="footer-link">Contato</a>
+                <a href="#" class="footer-link">Localização</a>
+                <a href="#" class="footer-link">API</a>
+                <a href="#" class="footer-link">CNPJ</a>
+            </ul>
+            <ul class="col p-0 d-flex flex-column">
+                <p class="footer-title fw-700">Ajuda e politicas</p>
+                <a href="#" class="footer-link">Politica de compra</a>
+                <a href="#" class="footer-link">Politica de privacidade</a>
+                <a href="#" class="footer-link">Termos de uso</a>
+                <a href="#" class="footer-link">Ajuda</a>
+            </ul>
+            <ul class="col p-0 d-flex flex-column">
+                <p class="footer-title fw-700">Comunidade</p>
+                <a href="#" class="footer-link">Se torne Premium</a>
+                <a href="#" class="footer-link">Compartilhe</a>
+                <a href="#" class="footer-link">Doe</a>
+                <a href="#" class="footer-link">Mantenha a comunidade</a>
+                <a href="#" class="footer-link">Bolsas</a>
+                <a href="#" class="footer-link">Internos</a>
+            </ul>
+            <ul class="col p-0 d-flex flex-column">
+                <p class="footer-title fw-700">Extras</p>
+                <a href="#" class="footer-link">Skype</a>
+                <a href="#" class="footer-link">Nuvem</a>
+                <a href="#" class="footer-link">Cloud</a>
+                <a href="#" class="footer-link">AWS</a>
+                <a href="#" class="footer-link">Azure</a>
+                <a href="#" class="footer-link">No things</a>
+                <a href="#" class="footer-link">Github</a>
+                <a href="#" class="footer-link">Twitter</a>
+            </ul>
+        </div>
+    </footer>
 
 </body>
 </html>
