Explore section got responsivity

--- a/index.html
+++ b/index.html
@@ -177,32 +177,39 @@
     <section class="explore">
         <h1>Explore o mercado</h1>
 
-        <div class="row first-row-explore">
+        <div class="row">
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block p-lg-0 d-lg-none"></div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block p-lg-0 d-lg-none"></div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
@@ -210,32 +217,42 @@
             </div>
         </div>
 
+        <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
+        <div class="w-100 p-3 d-block p-lg-0 d-lg-none"></div>
+
         <div class="row">
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
+            <div class="w-100 p-3 d-block p-lg-0 d-lg-none"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
+            <div class="w-100 p-3 d-block p-lg-0 d-lg-none"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
                 <p class="text-center fw-500">Gráficos e Vetores</p>
             </div>
+            <div class="w-100 p-3 d-block d-sm-none p-sm-0"></div>
             <div class="col">
                 <img src="assets/img/svg-icons/ink.svg" class="card-img-explore" alt="...">
                 <div class="line-item mx-auto"></div>
