--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
     <section class="benefits">
         <div class="row mw-100">
-            <div class="benefits-texts col-6">
+            <div class="benefits-texts col-12 col-xl-6">
                 <h1 class="m-0 benefits-title">A Brasil inteiro com a gente, venha fazer parte do time!</h1>
                 <h5 class="d-flex benefits-topic-title m-0"><svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 1° Empresa do ramo no Brasil</h5>
                 <h5 class="m-0 benefits-topic-paragraph">Find high-quality services at every price point. No hourly rates, just project-based pricing.</h5>
@@ -168,7 +168,7 @@
                 <h5 class="d-flex benefits-topic-title m-0"><svg class="align-center me-3 svg-ok" width="30" height="25" viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg"><path d="M8 1.75C4.54822 1.75 1.75 4.54822 1.75 8C1.75 11.4518 4.54822 14.25 8 14.25C11.4518 14.25 14.25 11.4518 14.25 8C14.25 4.54822 11.4518 1.75 8 1.75ZM0.25 8C0.25 3.71979 3.71979 0.25 8 0.25C12.2802 0.25 15.75 3.71979 15.75 8C15.75 12.2802 12.2802 15.75 8 15.75C3.71979 15.75 0.25 12.2802 0.25 8Z"></path><path d="M11.5303 5.46967C11.8232 5.76256 11.8232 6.23744 11.5303 6.53033L7.53033 10.5303C7.23744 10.8232 6.76256 10.8232 6.46967 10.5303L4.46967 8.53033C4.17678 8.23744 4.17678 7.76256 4.46967 7.46967C4.76256 7.17678 5.23744 7.17678 5.53033 7.46967L7 8.93934L10.4697 5.46967C10.7626 5.17678 11.2374 5.17678 11.5303 5.46967Z"></path></svg> 1° Empresa do ramo no Brasil</h5>
                 <h5 class="m-0 benefits-topic-paragraph">Find high-quality services at every price point. No hourly rates, just project-based pricing.</h5>
             </div>
-            <div class="col-6 d-flex align-items-center">
+            <div class="col-12 col-xl-6 d-flex align-items-center benefits-img-container p-0">
                 <img src="assets/img/benefits/video-thumb.png" class="mw-100 benefits-img" alt="">
             </div>
         </div>
