Business section got responsivity

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
 
     <section class="business">
         <div class="row mw-100">
-            <div class="benefits-texts col-6">
+            <div class="benefits-texts col-12 col-xl-6">
                 <h3 class="d-flex m-0" style="padding-bottom: 32px;">
                     <span class="fw-700">Projetar·me</span>&nbsp;Plus. 
                     <span class="align-self-top ms-2 float-text">Novidade</span>
@@ -296,8 +296,8 @@
 
                 <button class="btn btn-outline-light search-btn more-about" type="button" id="button-addon2" >Explore Essa Nova Experiencia</button>
             </div>
-            <div class="col-6 d-flex align-items-center">
-                <img src="assets/img/business/business-desktop-870-x1.png" class="mw-100 benefits-img" alt="">
+            <div class="col-12 col-xl-6 d-flex align-items-center p-0">
+                <img src="assets/img/business/business-desktop-870-x1.png" class="mw-100 benefits-img business-img" alt="">
             </div>
         </div>
     </section>
