--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <h1 class="mb-5 fw-500 services-title">Nosso principais serviços</h1>
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
-            <ul class="uk-slider-items uk-child-width-1-5 uk-child-width-1-5@m uk-grid-small">
+            <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-3@s uk-child-width-1-5@m uk-grid-small">
                 <li>
                     <div class="uk-panel">
                         <img src="assets/img/category/slide-01.jpg" alt="">
