More Projects section got responsivity

--- a/index.html
+++ b/index.html
@@ -373,10 +373,10 @@
         
         <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider>
 
-            <ul class="uk-slider-items uk-child-width-1-4 uk-child-width-1-4@m uk-grid-small">
+            <ul class="uk-slider-items uk-child-width-1-1 uk-child-width-1-2@s uk-child-width-1-4@m uk-grid-small">
                 <li>
                     <div class="uk-panel">
-                        <img src="assets/img/more-projects/skydesigner.png" alt="">
+                        <img src="assets/img/more-projects/skydesigner.png" class="more-projects-card-img" alt="">
                     </div>
                     <div class="uk-card uk-card-default">
                         <div class="uk-card-footer user-block">
