--- a/index.html
+++ b/index.html
@@ -501,11 +501,13 @@
                 <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
                 <p style="color: #95979d;" class="guide-text">O novo estilo de vida que milhões adotam.</p>
             </div>
+            <div class="mw-100 d-block d-md-none p-3"></div>
             <div class="col d-flex flex-column">
                 <img src="assets/img/guides/guide-start-online-business-552-x2.png" class="guide-img" alt="">
                 <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
                 <p style="color: #95979d;" class="guide-text">O novo estilo de vida que milhões adotam.</p>
             </div>
+            <div class="mw-100 d-block d-lg-none p-3"></div>
             <div class="col d-flex flex-column">
                 <img src="assets/img/guides/guide-start-online-business-552-x2.png" class="guide-img" alt="">
                 <a href="#"><h5 class="guide-title fw-700 m-0">Trabalhe de casa e ganhe dinheiro</h5></a>
